# Algebra-of-Polynomials

./: README.md
Algebra-of-Polynomials/: .gitignore  CMakeLists.txt
Algebra-of-Polynomials/Algebra-of-Polynomials/: Algebra-of-Polynomials.cpp  Algebra-of-Polynomials.h  CMakeLists.txt  atpoint.cpp  atpoint.h  mainwindow.cpp  mainwindow.h  multonconst.cpp  multonconst.h
Algebra-of-Polynomials/cmake/: function.cmake
Algebra-of-Polynomials/forms/: atpoint.ui  mainwindow.ui  multonconst.ui
Algebra-of-Polynomials/libs/Functional/lib_AVLTree/: AVLTree.h  CMakeLists.txt
Algebra-of-Polynomials/libs/Functional/lib_Iterator/: CMakeLists.txt
Algebra-of-Polynomials/libs/Functional/lib_List/: CMakeLists.txt  List.cpp  List.h
Algebra-of-Polynomials/libs/Functional/lib_Monom/: CMakeLists.txt  Monom.cpp  Monom.h
Algebra-of-Polynomials/libs/Functional/lib_Node/: CMakeLists.txt  Node.cpp  Node.h
Algebra-of-Polynomials/libs/Functional/lib_Parser/: CMakeLists.txt  Parser.cpp  Parser.h
Algebra-of-Polynomials/libs/Functional/lib_Polynom/: CMakeLists.txt  Polynom.cpp  Polynom.h
Algebra-of-Polynomials/libs/Functional/lib_Stack/: Stack.cpp  Stack.h
Algebra-of-Polynomials/libs/Functional/lib_SyntaxTree/: CMakeLists.txt  SyntaxTree.cpp  SyntaxTree.h
Algebra-of-Polynomials/libs/Functional/lib_TNode/: CMakeLists.txt  TNode.h
Algebra-of-Polynomials/libs/Functional/lib_Tree/: CMakeLists.txt  Tree.h
Algebra-of-Polynomials/libs/Tables/lib_AVLTreeTable/: AVLTreeTable.h
Algebra-of-Polynomials/libs/Tables/lib_ChainMethodTable/: CMakeLists.txt  ChainMethodTable.h
Algebra-of-Polynomials/libs/Tables/lib_HashTable/: CMakeLists.txt  HashTable.h
Algebra-of-Polynomials/libs/Tables/lib_LinearArrayTable/: CMakeLists.txt  LinearArrayTable.h
Algebra-of-Polynomials/libs/Tables/lib_LinearListTable/: CMakeLists.txt  LinearListTable.cpp  LinearListTable.h
Algebra-of-Polynomials/libs/Tables/lib_OpenShuffleTable/: CMakeLists.txt  OpenShuffleTable.h
Algebra-of-Polynomials/libs/Tables/lib_OrderedTable/: CMakeLists.txt  OrderedTable.cpp  OrderedTable.h
Algebra-of-Polynomials/libs/Tables/lib_SortedArrayTable/: CMakeLists.txt  SortedArrayTable.cpp  SortedArrayTable.h
Algebra-of-Polynomials/libs/Tables/lib_SortedTable/: CMakeLists.txt  SortedTable.cpp  SortedTable.h
Algebra-of-Polynomials/libs/Tables/lib_Table/: CMakeLists.txt  TTableRecord.h  Table.h
Algebra-of-Polynomials/libs/Tables/lib_TreeTable/: CMakeLists.txt
Algebra-of-Polynomials/libs/Tables/lib_UnorderedTable/: CMakeLists.txt  UnorderedTable.h
Algebra-of-Polynomials/libs/Tables/lib_UnsortedTable/: CMakeLists.txt  UnsortedTable.h
Algebra-of-Polynomials/libs/lib_AVLTreeTable/: AVLTreeTable.cpp  AVLTreeTable.h  CMakeLists.txt
Algebra-of-Polynomials/libs/lib_HashTable/: HashTable.h
Algebra-of-Polynomials/libs/lib_Iterator/: Iterator.h
Algebra-of-Polynomials/libs/lib_LinearArrayTable/: LinearArrayTable.cpp  LinearArrayTable.h
Algebra-of-Polynomials/libs/lib_LinearListTable/: LinearListTable.h
Algebra-of-Polynomials/libs/lib_List/: List.h
Algebra-of-Polynomials/libs/lib_Monom/: Monom.cpp  Monom.h
Algebra-of-Polynomials/libs/lib_Node/: Node.cpp  Node.h
Algebra-of-Polynomials/libs/lib_OrderedTable/: OrderedTable.h
Algebra-of-Polynomials/libs/lib_Parser/: Parser.h
Algebra-of-Polynomials/libs/lib_Polynom/: Polynom.h
Algebra-of-Polynomials/libs/lib_SortedArrayTable/: CMakeLists.txt  SortedArrayTable.h
Algebra-of-Polynomials/libs/lib_SortedTable/: CMakeLists.txt  SortedTable.h
Algebra-of-Polynomials/libs/lib_Stack/: CMakeLists.txt  Stack.h
Algebra-of-Polynomials/libs/lib_Table/: CMakeLists.txt  Table.h
Algebra-of-Polynomials/libs/lib_Tree/: CMakeLists.txt  Tree.h
Algebra-of-Polynomials/libs/lib_TreeTable/: TreeTable.h
Algebra-of-Polynomials/libs/lib_UnorderedTable/: UnorderedTable.cpp  UnorderedTable.h
Algebra-of-Polynomials/libs/lib_UnsortedTable/: UnsortedTable.cpp  UnsortedTable.h
Algebra-of-Polynomials/tests/: CMakeLists.txt  test_HashTable.cpp  test_LinearArrayTable.cpp  test_LinearListTable.cpp  test_List.cpp  test_Monom.cpp  test_Node.cpp  test_OrderedTable.cpp  test_Parser.cpp  test_Polynom.cpp  test_SortedArrayTable.cpp  test_SortedTable.cpp  test_Stack.cpp  test_Table.cpp  test_Tree.cpp  test_UnorderedTable.cpp  test_UnsortedTable.cpp
